relaxng-gen/tests/snapshots/build__test-ssp.snap
---
source: relaxng-gen/tests/build.rs
expression: combined
---
--- lib.rs ---
#![doc = concat!(
    "Generated from ",
    "'/home/elmarco/src/relaxng-rust/relaxng-gen/tests/fixtures/ssp.rng'", " schema."
)]
#![allow(dead_code)]
#![allow(unused_mut)]
#![allow(unused_variables)]
#![allow(unused_imports)]
use thiserror::Error;
pub mod startup_policy_choice;
pub mod storage_startup_policy;
pub mod test;
pub use test::*;
/// The error type used by this crate.
#[derive(Error, Debug)]
pub enum Error {
    #[error("IO error: {0}")]
    Io(#[from] std::io::Error),
    #[error("From UTF-8 error: {0}")]
    FromUtf8Error(#[from] std::string::FromUtf8Error),
    #[error("{0} builder is missing mandatory field: {1}")]
    BuilderMissingField(&'static str, &'static str),
    #[error("{0} builder cannot build a variant")]
    BuilderVariant(&'static str),
    #[error("String too short, expected at least {0} characters, got {1}")]
    TooShort(usize, usize),
    #[error("String too long, expected at most {0} characters, got {1}")]
    TooLong(usize, usize),
    #[error("String '{0}' does not match pattern '{1}'")]
    PatternMismatch(&'static str, String),
    #[error("Failed to compile regex: {0}")]
    RegexError(#[from] regex::Error),
    #[error("Failed to parse '{0}': {1}")]
    ParseError(
        &'static str,
        #[source]
        Box<dyn std::error::Error + Send + Sync + 'static>,
    ),
}
impl From<std::convert::Infallible> for Error {
    fn from(_: std::convert::Infallible) -> Self {
        unreachable!("Infallible error should not occur")
    }
}
/// Helper trait for this crate XML types.
pub trait ToXml {
    /// The associated builder type.
    type Builder: Default;
    /// Creates a new builder for this type.
    fn builder() -> Self::Builder {
        Self::Builder::default()
    }
    /// Writes Events to a XML writer.
    fn to_xml<W>(&self, writer: &mut quick_xml::Writer<W>) -> Result<()>
    where
        W: std::io::Write;
}
#[doc(hidden)]
pub trait RegexPattern {
    const REGEX: &'static str;
}
#[doc(hidden)]
#[derive(Debug, Clone, Copy, PartialEq, Eq, Hash)]
pub struct NoPattern;
impl RegexPattern for NoPattern {
    const REGEX: &'static str = "";
}
/// A string type with length constraints and optional runtime regex validation.
#[derive(Debug, Clone, PartialEq, Eq, Hash)]
pub struct ConstrainedString<
    const MIN_LEN: usize,
    const MAX_LEN: usize,
    P: RegexPattern = NoPattern,
> {
    value: String,
    _phantom: std::marker::PhantomData<P>,
}
impl<
    const MIN: usize,
    const MAX: usize,
    P: RegexPattern,
> ConstrainedString<MIN, MAX, P> {
    pub const NO_MIN_CONSTRAINT: usize = 0;
    pub const NO_MAX_CONSTRAINT: usize = usize::MAX;
    pub fn try_new(value: impl Into<String>) -> Result<Self> {
        let s = value.into();
        Self::validate(&s)?;
        Ok(Self {
            value: s,
            _phantom: std::marker::PhantomData,
        })
    }
    fn validate(s: &str) -> Result<()> {
        fn get_compiled_regex(pattern: &'static str) -> Result<regex::Regex> {
            /// Registry for compiled regex patterns
            static REGEX_REGISTRY: std::sync::OnceLock<
                std::sync::Mutex<std::collections::HashMap<&'static str, regex::Regex>>,
            > = std::sync::OnceLock::new();
            if pattern.is_empty() {
                return Ok(regex::Regex::new(".*").unwrap());
            }
            let registry = REGEX_REGISTRY
                .get_or_init(|| std::sync::Mutex::new(std::collections::HashMap::new()));
            let mut map = registry.lock().unwrap();
            if let Some(regex) = map.get(pattern) {
                return Ok(regex.clone());
            }
            match regex::Regex::new(pattern) {
                Ok(regex) => {
                    let result = regex.clone();
                    map.insert(pattern, regex);
                    Ok(result)
                }
                Err(e) => Err(Error::RegexError(e)),
            }
        }
        if MIN > Self::NO_MIN_CONSTRAINT && s.len() < MIN {
            return Err(Error::TooShort(MIN, s.len()));
        }
        if MAX < Self::NO_MAX_CONSTRAINT && s.len() > MAX {
            return Err(Error::TooLong(MAX, s.len()));
        }
        if !P::REGEX.is_empty() {
            let regex = get_compiled_regex(P::REGEX)?;
            if !regex.is_match(s) {
                return Err(Error::PatternMismatch(P::REGEX, s.to_string()));
            }
        }
        Ok(())
    }
    /// Returns the string as a `&str`.
    #[must_use]
    pub fn as_str(&self) -> &str {
        &self.value
    }
    /// Converts the constrained string into a `String`, consuming it.
    #[must_use]
    pub fn into_string(self) -> String {
        self.value
    }
}
impl<const MIN: usize, const MAX: usize, P: RegexPattern> std::ops::Deref
for ConstrainedString<MIN, MAX, P> {
    type Target = str;
    fn deref(&self) -> &Self::Target {
        &self.value
    }
}
impl<const MIN: usize, const MAX: usize, P: RegexPattern> std::fmt::Display
for ConstrainedString<MIN, MAX, P> {
    fn fmt(&self, f: &mut std::fmt::Formatter<'_>) -> std::fmt::Result {
        write!(f, "{}", self.value)
    }
}
impl<const MIN: usize, const MAX: usize, P: RegexPattern> AsRef<str>
for ConstrainedString<MIN, MAX, P> {
    fn as_ref(&self) -> &str {
        &self.value
    }
}
impl<const MIN: usize, const MAX: usize, P: RegexPattern> std::str::FromStr
for ConstrainedString<MIN, MAX, P> {
    type Err = Error;
    fn from_str(s: &str) -> Result<Self> {
        Self::try_new(s)
    }
}
/// A specialized Result type where the error is hard-wired to [`enum@Error`].
pub type Result<T, E = Error> = std::result::Result<T, E>;

--- main.rs ---
use std::path::Path;
use std::{env::args, fs};
fn main() {
    let path = args().nth(1).expect("No XML file path provided");
    let xml_path = Path::new(&path);
    let xml = fs::read_to_string(xml_path).expect("Failed to read test XML file");
    let xml = roxmltree::Document::parse(&xml).expect("Failed to parse XML");
    let root = xml.root().first_child().expect("No root element found");
    let res = test_ssp::Test::from_xml(&root).unwrap();
    let res = res.to_string();
    println!("{}", res);
}

--- startup_policy_choice.rs ---
use crate::{Error, Result, ToXml};
use std::str::FromStr;
#[derive(Debug, Clone, PartialEq, Eq, Hash)]
pub enum StartupPolicyChoice {
    Mandatory,
    Requisite,
    Optional,
}
impl ToXml for StartupPolicyChoice {
    type Builder = StartupPolicyChoiceBuilder;
    fn to_xml<W>(&self, writer: &mut quick_xml::Writer<W>) -> Result<()>
    where
        W: std::io::Write,
    {
        use quick_xml::events::{BytesEnd, BytesStart, BytesText, Event};
        match self {
            Self::Mandatory => {
                writer.write_event(Event::Text(BytesText::new("mandatory")))?;
            }
            Self::Requisite => {
                writer.write_event(Event::Text(BytesText::new("requisite")))?;
            }
            Self::Optional => {
                writer.write_event(Event::Text(BytesText::new("optional")))?;
            }
        }
        Ok(())
    }
}
impl core::fmt::Display for StartupPolicyChoice {
    fn fmt(&self, f: &mut core::fmt::Formatter<'_>) -> std::fmt::Result {
        let mut writer = quick_xml::Writer::new_with_indent(
            std::io::Cursor::new(Vec::new()),
            b' ',
            2,
        );
        self.to_xml(&mut writer).expect("Failed to generate XML");
        let res = writer.into_inner().into_inner();
        let str = String::from_utf8(res).expect("Failed to convert bytes to string");
        f.write_str(&str)
    }
}
impl StartupPolicyChoice {
    pub fn from_xml(
        node: &roxmltree::Node,
        from_child: &mut Option<roxmltree::Node>,
    ) -> Result<StartupPolicyChoice> {
        let mut builder = StartupPolicyChoice::builder();
        loop {
            let Some(child) = from_child else {
                break;
            };
            match child.node_type() {
                roxmltree::NodeType::Element => {
                    match child.tag_name().name() {
                        _ => {}
                    }
                }
                roxmltree::NodeType::Text => {
                    if let Some(val) = child.text() {
                        match val {
                            "mandatory" => {
                                builder.mandatory()?;
                            }
                            "optional" => {
                                builder.optional()?;
                            }
                            "requisite" => {
                                builder.requisite()?;
                            }
                            _ => {}
                        }
                    }
                }
                _ => {}
            }
            *from_child = child.next_sibling();
            if let Ok(build) = builder.build() {
                return Ok(build);
            }
        }
        builder.build()
    }
    pub fn to_xml_attr(
        &self,
        xml_start: &mut quick_xml::events::BytesStart<'_>,
    ) -> Result<()> {
        match self {
            Self::Mandatory => {}
            Self::Requisite => {}
            Self::Optional => {}
        }
        Ok(())
    }
    pub fn is_empty(&self) -> bool {
        self.to_string().is_empty()
    }
}
impl FromStr for StartupPolicyChoice {
    type Err = Error;
    fn from_str(s: &str) -> Result<Self> {
        let mut builder = Self::builder();
        match s {
            "mandatory" => {
                builder.mandatory()?;
            }
            "optional" => {
                builder.optional()?;
            }
            "requisite" => {
                builder.requisite()?;
            }
            other => {
                dbg!(other);
            }
        }
        builder.build()
    }
}
#[derive(Default, Debug, Clone, PartialEq, Eq, Hash)]
pub struct StartupPolicyChoiceBuilder {
    mandatory: Option<()>,
    requisite: Option<()>,
    optional: Option<()>,
}
impl StartupPolicyChoiceBuilder {
    pub fn mandatory(&mut self) -> Result<&mut Self> {
        self.mandatory = Some(());
        Ok(self)
    }
    pub fn requisite(&mut self) -> Result<&mut Self> {
        self.requisite = Some(());
        Ok(self)
    }
    pub fn optional(&mut self) -> Result<&mut Self> {
        self.optional = Some(());
        Ok(self)
    }
    pub fn build(&self) -> Result<StartupPolicyChoice> {
        if self.mandatory.is_some() {
            return Ok(StartupPolicyChoice::Mandatory);
        }
        if self.requisite.is_some() {
            return Ok(StartupPolicyChoice::Requisite);
        }
        if self.optional.is_some() {
            return Ok(StartupPolicyChoice::Optional);
        }
        Err(Error::BuilderVariant("StartupPolicyChoice"))
    }
}

--- storage_startup_policy.rs ---
use crate::{Error, Result, ToXml};
use std::str::FromStr;
use crate::startup_policy_choice::StartupPolicyChoice;
#[derive(Debug, Clone, PartialEq, Eq, Hash)]
pub enum StorageStartupPolicy {
    StartupPolicyChoice(StartupPolicyChoice),
}
impl ToXml for StorageStartupPolicy {
    type Builder = StorageStartupPolicyBuilder;
    fn to_xml<W>(&self, writer: &mut quick_xml::Writer<W>) -> Result<()>
    where
        W: std::io::Write,
    {
        use quick_xml::events::{BytesEnd, BytesStart, BytesText, Event};
        match self {
            Self::StartupPolicyChoice(startup_policy) => {
                let elem = startup_policy;
            }
        }
        Ok(())
    }
}
impl core::fmt::Display for StorageStartupPolicy {
    fn fmt(&self, f: &mut core::fmt::Formatter<'_>) -> std::fmt::Result {
        let mut writer = quick_xml::Writer::new_with_indent(
            std::io::Cursor::new(Vec::new()),
            b' ',
            2,
        );
        self.to_xml(&mut writer).expect("Failed to generate XML");
        let res = writer.into_inner().into_inner();
        let str = String::from_utf8(res).expect("Failed to convert bytes to string");
        f.write_str(&str)
    }
}
impl StorageStartupPolicy {
    pub fn from_xml(
        node: &roxmltree::Node,
        from_child: &mut Option<roxmltree::Node>,
    ) -> Result<StorageStartupPolicy> {
        let mut builder = StorageStartupPolicy::builder();
        if let Some(val) = node.attribute("startupPolicy") {
            builder.startup_policy(StartupPolicyChoice::from_str(val)?)?;
        }
        loop {
            let Some(child) = from_child else {
                break;
            };
            match child.node_type() {
                roxmltree::NodeType::Element => {
                    match child.tag_name().name() {
                        _ => {}
                    }
                }
                roxmltree::NodeType::Text => {
                    if let Some(val) = child.text() {
                        match val {
                            _ => {}
                        }
                    }
                }
                _ => {}
            }
            *from_child = child.next_sibling();
            if let Ok(build) = builder.build() {
                return Ok(build);
            }
        }
        builder.build()
    }
    pub fn to_xml_attr(
        &self,
        xml_start: &mut quick_xml::events::BytesStart<'_>,
    ) -> Result<()> {
        match self {
            Self::StartupPolicyChoice(startup_policy) => {
                let elem = startup_policy;
                {
                    let elem = startup_policy;
                    xml_start
                        .push_attribute((
                            &b"startupPolicy"[..],
                            quick_xml::escape::escape(&elem.to_string()).as_bytes(),
                        ));
                }
            }
        }
        Ok(())
    }
    pub fn is_empty(&self) -> bool {
        self.to_string().is_empty()
    }
}
impl FromStr for StorageStartupPolicy {
    type Err = Error;
    fn from_str(s: &str) -> Result<Self> {
        let mut builder = Self::builder();
        match s {
            val if StartupPolicyChoice::from_str(val).is_ok() => {
                let val: StartupPolicyChoice = StartupPolicyChoice::from_str(val)
                    .unwrap();
                builder.startup_policy(val)?;
            }
            other => {
                dbg!(other);
            }
        }
        builder.build()
    }
}
#[derive(Default, Debug, Clone, PartialEq, Eq, Hash)]
pub struct StorageStartupPolicyBuilder {
    startup_policy: Option<StartupPolicyChoice>,
}
impl StorageStartupPolicyBuilder {
    pub fn startup_policy<T>(&mut self, startup_policy: T) -> Result<&mut Self>
    where
        T: TryInto<StartupPolicyChoice>,
        Error: From<<T as TryInto<StartupPolicyChoice>>::Error>,
    {
        self.startup_policy = Some(startup_policy.try_into()?);
        Ok(self)
    }
    pub fn build(&self) -> Result<StorageStartupPolicy> {
        if self.startup_policy.is_some() {
            return Ok(
                StorageStartupPolicy::StartupPolicyChoice(
                    Clone::clone(&self.startup_policy.as_ref().unwrap()),
                ),
            );
        }
        Err(Error::BuilderVariant("StorageStartupPolicy"))
    }
}

--- test.rs ---
//!`test` module
use crate::{Error, Result, ToXml};
use std::str::FromStr;
use crate::storage_startup_policy::StorageStartupPolicy;
///`<test/>` element
#[derive(Debug, Clone, PartialEq, Eq, Hash)]
pub struct Test {
    pub storage_startup_policy: Option<StorageStartupPolicy>,
}
impl ToXml for Test {
    type Builder = TestBuilder;
    fn to_xml<W>(&self, writer: &mut quick_xml::Writer<W>) -> Result<()>
    where
        W: std::io::Write,
    {
        use quick_xml::events::{Event, BytesStart, BytesEnd, BytesText};
        let mut xml_start = BytesStart::new("test");
        {
            let elem = &self.storage_startup_policy;
            if let Some(elem) = elem {
                elem.to_xml_attr(&mut xml_start)?;
            }
        }
        let empty = {
            true
                && ({
                    let elem = &self.storage_startup_policy;
                    elem.as_ref().map(|elem| elem.is_empty()).unwrap_or(true)
                })
        };
        if empty {
            writer.write_event(Event::Empty(xml_start))?;
        } else {
            writer.write_event(Event::Start(xml_start))?;
            {
                let elem = &self.storage_startup_policy;
                if let Some(elem) = elem {
                    elem.to_xml(writer)?;
                }
            }
            writer.write_event(Event::End(BytesEnd::new("test")))?;
        }
        Ok(())
    }
}
impl Test {
    pub fn from_xml(node: &roxmltree::Node) -> Result<Self> {
        let mut builder = Self::builder();
        for child in node.children() {
            match child.tag_name().name() {
                _ => continue,
            }
        }
        if let Some(val) = node.text() {
            match val {
                _ => {}
            }
        }
        let child = &mut node.first_child();
        if let Ok(val) = StorageStartupPolicy::from_xml(node, child) {
            builder.storage_startup_policy(Some(val))?;
        }
        builder.build()
    }
}
impl core::fmt::Display for Test {
    fn fmt(&self, f: &mut core::fmt::Formatter<'_>) -> std::fmt::Result {
        let mut writer = quick_xml::Writer::new_with_indent(
            std::io::Cursor::new(Vec::new()),
            b' ',
            2,
        );
        self.to_xml(&mut writer).expect("Failed to generate XML");
        let res = writer.into_inner().into_inner();
        let str = String::from_utf8(res).expect("Failed to convert bytes to string");
        f.write_str(&str)
    }
}
///`<test/>` builder
#[derive(Default, Debug, Clone, PartialEq, Eq, Hash)]
pub struct TestBuilder {
    pub storage_startup_policy: Option<StorageStartupPolicy>,
}
impl TestBuilder {
    pub fn storage_startup_policy<T>(
        &mut self,
        storage_startup_policy: Option<T>,
    ) -> Result<&mut Self>
    where
        T: TryInto<StorageStartupPolicy>,
        Error: From<<T as TryInto<StorageStartupPolicy>>::Error>,
    {
        self.storage_startup_policy = if let Some(storage_startup_policy) = storage_startup_policy {
            Some(storage_startup_policy.try_into()?)
        } else {
            None
        };
        Ok(self)
    }
    /**
            Attempt to build [`Test`].

            If the element is not valid, an error is returned.
            */
    pub fn build(&self) -> Result<Test> {
        let storage_startup_policy = Clone::clone(&self.storage_startup_policy);
        Ok(Test { storage_startup_policy })
    }
}
